# devopster-cli

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  DEPLOYMENT_STRATEGY.md  Dockerfile  Makefile  README.md  devopster-config.example.yaml  metrics.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/scripts/: update_repo_views_counter.js
.github/workflows/: auto-fill-pr.yml  ci.yml  deploy-pages.yml  desktop-app.yml  release-artifacts.yml  update-md-date.yml  use-visitor-counter.yml  workflow-lint.yml
assets/readme/: product-preview.html
docs/: index.html  site.webmanifest
docs/assets/releases/: latest.json
frontend/: app.js  index.html  styles.css
scripts/: container.sh  install-macos-app.sh  setup.ps1  setup.sh
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: mod.rs
src/auth/: mod.rs
src/cli/: catalog.rs  config_cmd.rs  container_runtime.rs  dev.rs  dev_env.rs  diagnostics.rs  init.rs  inventory.rs  login.rs  mod.rs  repo.rs  setup.rs  stats.rs  topics.rs
src/config/: mod.rs
src/provider/: azure_devops.rs  github.rs  gitlab.rs  mod.rs
