# Standalone package (not part of the root devopster-cli workspace).
# Building this app does not require building the CLI crate as a workspace member;
# the CLI is supplied as a sidecar binary at runtime.
[workspace]

[package]
name = "devopster-desktop"
version = "0.1.0"
edition = "2021"
description = "DevOpster desktop application (Tauri shell around the devopster CLI)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Cloud2BR/devopster-cli"
rust-version = "1.85"

[lib]
name = "devopster_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "devopster-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1.43", features = ["process", "io-util", "rt-multi-thread", "macros"] }
anyhow = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
